<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">谍报馆</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="decription">ImageView</string>
    <string name="menu_favorites">我的收藏</string>
    <string name="menu_apps_recommended">应用推荐</string>
    <string name="menu_update">版本更新</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="about_title">关于我们</string>
    <string name="about_message">谍报馆是手机中国推出的手机资讯客户端,为用户提供最快速 全面的手机新品谍报 新机评测 应用体验 价格促销等精彩内容.手机中国成立于2007年9月,是一家资讯覆盖全国并定位于专业与品位并重的新兴垂直手机网站,被认为是中国第一专业手机门户.手机中国立足手机高端专业内容的建设,拥有20多个专业频道 100余个子频道,每天提供上百篇最新最快的手机市场信息 新品曝光 新机评测 购买指导等专业原创内容.</string>
    <string name="about_message_version">软件版本:1.0</string>
    <string name="about_message_wesite">网址:www.cnmo.com</string>
    <string name="about_wesite">http://www.cnmo.com</string>
    <string name="about_wap_wepsite">http://m.cnmo.com</string>
    <string name="about_message_wap_website">WAP版网址:m.cnmo.com</string>
    <string name="about_message_service_message">服务条款</string>
    <string name="about_message_service_Statement">免责声明</string>
    <string name="service_message_detail">1、谍报馆是一款免费网络应用软件。在使用的过程中产生的网络流量费用由用户自行承担，详情请咨询您当地的网络服务提供商。 \n 2、由于不可抗力，中断和缺失、设备故障、通讯故障、户信息服务出现中断、停顿、延迟、数据错误等情况手机中国不承担任何责任。\n 3、谍报馆相关资讯如与制造商最终公布的产品有所出入，以制造商最终公布的参数为准，手机中国不保证产品未发布阶段信息内容的准确性、完整性，不承担由此引起的任何损失、损害。\n 4、用户在使用谍报馆的服务时，必须注意账号信息的保密，防止身份信息被他人仿冒。凡密码正确情况下所进行的一切行为，均视为用户本人的行为。由此造成的损失、损害由用户自行承担。\n 5、用户注册和使用谍报馆提交的个人信息，酷软汇将为用户严格保护，绝不不外泄第三方。用户因遭遇黑客攻击、木马病毒、恶意侵入、网络拦截等行为而造成的资料外泄手机中国不承担任何责任。\n 6、本声明的最终解释权归手机中国所有。\n 以上风险提示，您已阅读并理解，如果您点击“同意”按钮继续使用，即表明同意承担使用该业务存在的全部风险。\n</string>
    <string name="service_statement_detail">谍报馆提供的资讯除非注明，均为手机中国原创或者根据互联网公开信息编译，如有内容涉及侵权请及时联系我们。\n</string>
    <string name="set_top_title">设置</string>
    <string name="set_text_pushtitle">账号</string>
    <string name="set_text_user_setting">个人账号</string>
    <string name="set_text_user_seting_buttom">设置CNMO账号，绑定其他平台账号</string>
    <string name="set_text_size_title">正文</string>
    <string name="set_text_size_index">设置字体大小</string>
    <string name="set_text_size_setting">字体设置</string>
    <string name="set_text_3g_title">流量控制</string>
    <string name="set_text_wifi_setting">WIFI设置</string>
    <string name="set_text_wifi_index">离线后不需要网络也可以看文章图片</string>
    <string name="set_text_3g_setting">3G/2G网络节省流量设置</string>
    <string name="set_text_3g_index">关闭后不再加载图片</string>
    <string name="set_text_clean_setting">清除缓存</string>
    <string name="set_text_clean_index">清除缓存的临时文件，当前缓存大小为%1$sMB</string>
    <string name="set_text_push_title">推送</string>
    <string name="set_text_push_setting">推送设置</string>
    <string name="set_text_push_index">设置推送提醒</string>
    <string name="set_text_push_time_title">推送时间设置</string>
    <string name="set_text_softinfo_title">软件信息</string>
    <string name="set_text_idea_setting">意见反馈</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_content_hint">欢迎您提出宝贵的意见与建议,您的每个字都将用来改善我们的软件。</string>
    <string name="feedback_email_title">联系方式:</string>
    <string name="feedback_email_hint">邮箱/QQ/手机号</string>
    <string name="set_text_fingerpost_setting">新手指南</string>
    <string name="feedback_comment_request">提交</string>
    <string name="set_account_state">未登录</string>
    <string name="set_account_instroduction">登录之后就可以发表、回复跟帖了</string>
    <string name="set_btn_login">登录</string>
    <string name="set_text_offline">离线下载</string>
    <string name="set_text_offline_doc">在wifi状态下是否离线下载所有文章数据</string>
    <string name="login_username">用户名</string>
    <string name="login_hint_username">请输入用户名</string>
    <string name="login_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="login_hint_password">请输入4&#045;20位密码</string>
    <string name="login_btn_submit">登录</string>
    <string name="login_register">如未注册，请先注册</string>
    <string name="reg_username">ID</string>
    <string name="reg_hint_username">中文,英文或数字</string>
    <string name="reg_password">密码</string>
    <string name="reg_hint_password">4&#045;20位</string>
    <string name="reg_email">邮箱</string>
    <string name="reg_hint_email">email地址</string>
    <string name="reg_btn_show">显示</string>
    <string name="reg_btn_register">注册</string>
    <string name="reg_btn_cancel">取消</string>
    <string name="reg_text_agree">我已阅读并同意</string>
    <string name="reg_text_treaty">注册协议</string>
    <string name="det_text_title">文章详情</string>
    <string name="det_btn_title">跟贴</string>
    <string name="det_text_hint">请输入文字…</string>
    <string name="det_btn_send">发送</string>
    <string name="pop_1">爱美妆</string>
    <string name="pop_2">爱美访</string>
    <string name="pop_3">雯琰文</string>
    <string name="pop_4">爱美志</string>
    <string name="pop_5">应用谍报</string>
    <string name="pop_6">体验谍报</string>
    <string name="pop_7">价格谍报</string>
    <string name="pop_8">新品谍报</string>
    <string name="drop_down_list_header_pull_text">下拉刷新&#8230;</string>
    <string name="drop_down_list_header_release_text">放开以刷新&#8230;</string>
    <string name="drop_down_list_header_loading_text">正在加载&#8230;</string>
    <string name="drop_down_list_footer_default_text">加载更多&#8230;</string>
    <string name="drop_down_list_footer_loading_text">正在加载&#8230;</string>
    <string name="image_content">image</string>
    <string name="inter_dialogprograss">正在加载&#8230;</string>
    <string name="text_morecomment">更多评论</string>
    <string name="text_hint">请输入文字 &#046;&#046;&#046;</string>
    <string name="page_no_data_message">暂无数据</string>
    <string name="app_recommend">应用推荐</string>
    <string name="app_recommend_txt">体验更多酷炫应用，请下载安装酷软汇</string>
    <string name="app_recommend_download">下载</string>
    <string name="det_img_title">首页推荐</string>

</resources>