<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="3dip"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_pop1"
        style="@style/pop_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1.0dip"
        android:gravity="center"
        android:text="@string/pop_1" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_seprate" />

    <Button
        android:id="@+id/btn_pop2"
        style="@style/pop_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pop_2" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_seprate" />

    <Button
        android:id="@+id/btn_pop3"
        style="@style/pop_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pop_3" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_seprate" />

    <Button
        android:id="@+id/btn_pop4"
        style="@style/pop_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pop_4" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_seprate" />

    <Button
        android:id="@+id/btn_pop5"
        style="@style/pop_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pop_5" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_seprate" />

    <Button
        android:id="@+id/btn_pop6"
        style="@style/pop_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pop_6" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_seprate" />

    <Button
        android:id="@+id/btn_pop7"
        style="@style/pop_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pop_7" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_seprate" />

    <Button
        android:id="@+id/btn_pop8"
        style="@style/pop_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pop_8" />

</LinearLayout>